--- a/JS/index.html
+++ b/JS/index.html
@@ -93,6 +93,23 @@
       <label for="confirmPassword">Подтверждение пароля:</label>
       <input type="password" id="confirmPassword" required>
 
+      <label for="faculty">Факультет:</label>
+      <input type="text" id="faculty" name="faculty" pattern="[A-Za-z0-9.]{2,}" required>
+
+      <label for="fullName">ФИО:</label>
+      <input type="text" id="fullName" name="fullName" pattern="[A-Za-z0-9.]{2,}" required>
+
+      <label for="department">Кафедра:</label>
+      <input type="text" id="department" name="department" pattern="[A-Za-z0-9.]{2,}" required>
+
+      <label for="phone">Телефон:</label>
+      <input type="tel" id="phone" name="phone" pattern="\+\d{11}" required>
+
+      <!-- Поле Дата -->
+      <label for="date">Дата:</label>
+      <input type="date" id="date" name="date" required>
+
+
 
       <label for="checkboxSkills">Выберите навыки:</label>
       <div id="checkboxSkills">
