--- a/mypage/index.html
+++ b/mypage/index.html
@@ -19,8 +19,11 @@
     <section class="section1">
 
         <div class="gray-block mygreyblock">
-            <div class="image-wrapper">
-                <img src="images/babasrozmarinom.png" alt="Overlay Image">
+            <div >
+                <img src="images/babasrozmarinom.png" alt="Overlay Image" class="overlay-image">
+            </div>
+            <div>
+                <img src="images/BotanicaliPhoneWallpaper7.jpg"  alt="Background Image" class="imagebotanic">
             </div>
             <h2 class = "forheadingrey">Organic Garden</h2>
             <div class="content">
